--- a/awsy-template.cfg
+++ b/awsy-template.cfg
@@ -1,3 +1,8 @@
 [pulse]
 user = user_name
 password = password
+
+[treeherder]
+host = local.treeherder.mozilla.org
+client_id = client_id
+client_secret = client_secret
