--- a/awsy-template.cfg
+++ b/awsy-template.cfg
@@ -3,12 +3,12 @@ user = user_name
 password = password
 
 [treeherder]
-host = local.treeherder.mozilla.org
+server_url = http://local.treeherder.mozilla.org
 client_id = client_id
 client_secret = client_secret
 
 [treeherder_staging]
-host = treeherder.allizom.org
+server_url = https://treeherder.allizom.org
 client_id = client_id
 client_secret = client_secret
 
