--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-boto
-marionette-client
-mercurial
-mozdownload
-MozillaPulse
-treeherder-client>=3.0.0
+boto==2.39.0
+marionette-client==3.1.0
+mercurial==3.2.4
+mozdownload==1.20.2
+MozillaPulse==1.0.1
+treeherder-client==3.0.0
